@@ -1,3 +1,9 @@
+User visible changes
+--------------------
+
+* Readline is now used properly on Cygwin/X11.
+
+
 2.31 (2003-09-01)
 =================
 
