@@ -1,3 +1,10 @@
+2003-09-24  Sam Steingold  <sds@gnu.org>
+
+	readline is now used on Cygwin/X11
+	* stream.d (stdio_same_tty_p): extracted from make_terminal_stream_()
+	use ttyname(stdin)=ttyname(stdout) on cygwin
+	(make_terminal_stream_): use it
+
 2003-09-23  Sam Steingold  <sds@gnu.org>
 
 	* init.lisp (load) [:COMPILING]: bind *ERROR-COUNT* *WARNING-COUNT*
